[build-system]
requires = ["flit_core >=3.2,<4", "sphinx", "sphinx_rtd_theme"]
build-backend = "flit_core.buildapi"

[project]
requires = ["flit_core >=3.2,<4", "sphinx", "sphinx_rtd_theme"]
name = "PlotVision"
authors = [{name = Matthew Martens", email = "mdm305@usask.ca"}]
dynamic = ["version", "description"]
